Create elements for translator app

--- a/app/src/main/res/layout/my_first_layout.xml
+++ b/app/src/main/res/layout/my_first_layout.xml
@@ -4,8 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:id="@+id/my_layout_et_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
     <Button
-        android:id="@+id/btnMyFirstButton"
+        android:id="@+id/btn_translate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button" />
@@ -16,10 +24,6 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+
 
 </LinearLayout>
